<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".eventDetail.EventDetailFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="15dp"
        android:paddingTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/detail_frag_event_title"
                android:text="@string/event_detail_event_name"
                android:paddingStart="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/event_detail_name_edittext"
                android:maxLines="1"
                android:paddingHorizontal="5dp"
                android:hint="@string/event_detail_edittext_hint"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/event_detail_event_priority"
                android:paddingStart="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/event_detail_priority_edittext"
                android:hint="@string/event_detail_edittext_hint"
                android:maxLines="1"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/event_detail_event_start_date"
                android:paddingStart="10dp"
                />
            <EditText
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/event_detail_start_date_edittext"
                android:hint="@string/event_detail_edittext_hint"
                android:inputType="date"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/event_detail_event_due_date"
                android:paddingHorizontal="10dp"/>

            <EditText
                android:id="@+id/event_detail_due_date_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/event_detail_edittext_hint"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/event_detail_event_is_repeat"
                android:paddingHorizontal="10dp"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:id="@+id/event_detail_repeat_switch"
                />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/event_detail_event_need_alarm"
                android:paddingHorizontal="10dp"
                android:layout_marginStart="60dp"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:id="@+id/event_detail_alarm_switch"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/event_detail_event_is_completed"
                android:paddingHorizontal="10dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginStart="10dp"
                android:id="@+id/event_detail_complete_switch"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </LinearLayout>


    </LinearLayout>
</FrameLayout>